<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llItem"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:minHeight="80dp"
        card_view:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1.0"
            android:background="@color/color_light_brown"
            android:padding="10dp">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.3">

                <LinearLayout
                    android:id="@+id/llItemSecondRow"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:text="@string/category"
                        android:textColor="@color/textBlack"
                        android:textStyle="bold"
                        android:textSize="19sp"
                        android:paddingRight="5dp"/>

                    <TextView
                        android:id="@+id/tvPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/textGrey"
                        android:textSize="14sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/meal_description"
                    android:textColor="@color/textBlack"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:src="@drawable/ic_pizza"
                android:contentDescription="@string/pizza"
                android:layout_weight="0.7"
                android:scaleType="centerInside"
                android:background="?android:selectableItemBackground" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>